2003-04-20  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.[ch]: Results cell in summary reporting can also be a
	list of cell ranges.

	* scenarios.c (scenario_summary_res_cells): Fixed the results
	reporting in summary report.

2003-04-19  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* data-shuffling.c (run_shuffling_tool): Implement free area search.

2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.c (scenario_move_range): Implemented.
	(move_range): Implemented the simplest case.
	
	* scenarios.c (scenario_summary_res_cells): Result cells output added.

	* dao.c (dao_set_align): Wrote.

	* scenarios.c (*): Replaced the loops that go through the values
	by a callback function. Store values before showing a scenario and
	restore them if cancelled.

2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.c (scenario_new): Make the name to be unique if it
	isn't already.
	(find_scenario): Renamed by scenario_find_by_name.
	
	* scenarios.c (scenario_add_new): Simplified the API.

	* scenarios.c (find_scenario): API change to check the deletion
	flag.
	(scenario_delete): Renamed to scenario_mark_deleted and modified
	to support canceling deletions.
	(scenario_recover_all): New function.
	(scenario_summary): Return also the new sheet where the report
	exists to support canceling.

	* scenarios.h (scenario_t): Added marked_deleted field.
	(*): API changes.
	
2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.c (scenario_summary): Set colors of the report.

	* dao.c (dao_set_colors): Wrote.

	* scenarios.c (scenario_add_new, collect_values): Return TRUE if
	changing cells contain at least one formula.

2003-04-14  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.c (scenario_summary): Implemented. Result cells output
	still missing.

2003-04-11  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* scenarios.c: Added support for insert column/row and delete
	column/row.

2003-04-10  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
